# IndustryGame

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
src/: main.cpp  version.hpp
src/buildings/: building.hpp  building_definition.hpp
src/core/: color.hpp  id.hpp  position.hpp
src/events/: truck_events.hpp
src/game/: game.cpp  game.hpp  world.cpp  world.hpp
src/managers/: logistic_manager.cpp  logistic_manager.hpp  production_manager.cpp  production_manager.hpp  sale_manager.hpp
src/rendering/: irenderer.hpp  raylib_renderer.cpp  raylib_renderer.hpp  world_renderer.cpp  world_renderer.hpp
src/resources/: resource.hpp  resource_definition.hpp  resource_processor.hpp  resource_storage.hpp
src/trucks/: truck.hpp  truck_definition.hpp
